--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: arial;
+    color: #333333;
 }
 /**Navbar**/
 #navbar {
@@ -18,7 +20,7 @@ html, body {
 #navbar a {
     text-decoration: none;
     float: left;
-    color: #555555;
+    color: #333333;
     padding: 0.5rem 1rem;
 }
 
@@ -34,6 +36,9 @@ html, body {
     display:flex;
     align-items:center;
     justify-content:center;
+}
+#vcenter {
+    position: relative;
 }
 /**Search**/
 #search-div {
@@ -51,18 +56,44 @@ html, body {
     border-bottom-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
 }
+#icon {
+    position: absolute;
+    left: -6.2rem;
+    top: 2.5rem;
+    z-index: 1;
+}
+#search:hover {
+    box-shadow: 5px 10px 8px #888888;
+}
 /**Image**/
 img {
     width: 20rem;
+}
+/**Buttons*/
+#btn-div {
+    position: absolute;
+    top: 13rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+#btns {
+    border: none;
+    padding: 0.5rem 1rem;
+    background: #eeeeee;
 }
 /**Media**/
 @media(max-width: 480px) {
     img {
         width: 100%;
     }
+    #icon {
+        position: absolute;
+        left: -1.1rem;
+    }
     #search {
         width: 100%;
-        padding: 0.5rem 0;
-        left: 0;
+        padding: 0.5rem 2rem;
+        left: -2rem;
     }
 }
